src/AtcWeb/Styles/core/_base.scss
.app-loading-text {
  font-family: "Audiowide", "Roboto", "Helvetica", "Arial", "sans-serif" !important;
  font-size: 32px;
  background: linear-gradient(82deg,#673AB7 0%,#EA80FC 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.atc-h1-gradient {
  font-family: "Audiowide", "Roboto", "Helvetica", "Arial", "sans-serif" !important;
  font-size: 64px;
  font-weight: 600;
  font-style: italic;
  background: linear-gradient(82deg,#673AB7 0%,#EA80FC 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.atc-appbar-brand-text {
  font-family: "Audiowide", "Roboto", "Helvetica", "Arial", "sans-serif" !important;
}

.full-page-height {
  height: 100vh;
  height: 100dvh;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
}

.atc-brand {
  margin: 32px 0 0;
  padding: 0px;

  &:hover {
    cursor: pointer;
    color: var(--mud-palette-primary);
    transition: color 250ms cubic-bezier(.4,0,.2,1) 0ms,box-shadow 250ms cubic-bezier(.4,0,.2,1) 0ms,border 250ms cubic-bezier(.4,0,.2,1) 0ms;
  }
}

atc-appbar-band {
  overflow: hidden;
}

@media (max-width:600px) {
  .atc-appbar-band {
    background-position: 14px 0px;
  }
}

.atc-appbar-brand-text {
  letter-spacing: 0.5rem;
  font-weight: 300;
  margin-left: 12px;
  font-size: 24px;
  user-select: none;
  background: linear-gradient(82deg, #776be7 0%, #EA80FC 50%, #ff4081 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}

@media (max-width:400px) {
  .atc-appbar-brand-text {
    letter-spacing: 0.25rem;
  }
}


.atc-navmenu {
  overflow-x: hidden;
  overflow-y: scroll;
  margin-bottom: 12px;
}

.docs-nav-fader {
  display: block;
  position: sticky;
  top: 0;
  height: 40px;
  background-image: linear-gradient(to top,rgba(255,255,255,0),var(--mud-palette-drawer-background));
  z-index: 100;
}

.docs-nav-filler {
  display: flex;
  flex-grow: 1;
}

.atc-container + .atc-container {
  margin-bottom: 128px;
}


.atc-main-content {
  padding-top: 86px;
  padding-bottom: calc(86px + env(safe-area-inset-bottom, 0px));
  padding-left: env(safe-area-inset-left, 0px);
  padding-right: env(safe-area-inset-right, 0px);
}


@media (min-width: 960px) {
  .atc-main-content {
    padding-top: 128px;
    padding-bottom: 64px;
    padding-left: 12px;
  }
}


.docs-list {
  list-style: inside;
}

.docs-expand-wrapper {
  color: var(--mud-palette-white);
  background-color: var(--mud-palette-black);

  .docs-default-theme {
    .mud-expand-panel {
      color: inherit;
      background-color: inherit;
      border: none !important;

      .mud-expand-panel-text {
        color: #988ef1;
        font-weight: 500;
        font-size: 1rem;
      }
    }
  }
}

.mud-table-toolbar {
    margin-bottom: 50px;
}

.mud-simple-table > div > table {
  thead > tr > th {
    border: none;
  }

  tbody > tr > td {
    border: none !important;
  }
}

.mud-simple-table {
  &.mud-table-bordered > div > table {
    thead > tr > th {
      border: 1px groove var(--mud-palette-table-lines);
    }

    tbody > tr > td {
      border: 1px groove var(--mud-palette-table-lines) !important;
    }
  }
}

.atc-simple-table-clean {
  tr > td {
    border: none;
    margin: 0px !important;
    padding: 4px 0px !important;
    border: none !important;
  }

  &.table-no-padding > tr > td {
    padding: 0px !important;
  }
}

.atc-simple-table-clean-bottom-line > tr > td {
  border: none;
  margin: 0px !important;
  padding: 4px 0px !important;
  border: none !important;
  border-bottom: 1px groove var(--mud-palette-table-lines) !important;
}

.atc-simple-table-clean-bottom-line > tr:last-child > td {
  border: none;
  margin: 0px !important;
  padding: 4px 0px !important;
  border: none !important;
}

